module(name = "bzlmod_example")

# From https://registry.bazel.build/
bazel_dep(name = "aspect_rules_js", version = "1.28.0")
bazel_dep(name = "aspect_rules_ts", version = "1.4.2")

################################################################################
# rules_js
# From https://github.com/aspect-build/rules_js/releases
################################################################################

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
# bazel_dep(name = "rules_nodejs", version = "5.8.2")
# node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
# node.toolchain(node_version = "16.14.2")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    # npmrc = "//:.npmrc",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

################################################################################
# rules_ts
# From https://github.com/aspect-build/rules_ts/releases
################################################################################

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")